--- a/index.html
+++ b/index.html
@@ -1975,8 +1975,28 @@
             <div class="PlayerBadgeArchivedRedLine"></div>
             <img src="./imgs/PlayerBadge.png">
             <div class="BadgeModalScreen">
-                <p>100 matchs Badge</p>
+                <p>100 Matchs Badge</p>
                 <p>10<span class="MatchColor">0</span> Match<span class="MatchColor">s</span> Badg<span class="MatchColor">e</span></p>
+            </div>
+            <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
+          </div>
+
+          <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
+            <div class="KillerBadgeArchivedRedLine"></div>
+            <img src="./imgs/KillerAdge.png">
+            <div class="KillerBadgeModalScreen">
+                <p>100 Kills Badge</p>
+                <p>10<span class="KillerColor">0</span> Kill<span class="KillerColor">s</span> Badg<span class="KillerColor">e</span></p>
+            </div>
+            <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
+          </div>
+
+          <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
+            <div class="WinnerBadgeArchivedRedLine"></div>
+            <img src="./imgs/WinnerBadge.png">
+            <div class="WinnerBadgeModalScreen">
+                <p>100 Win Badge</p>
+                <p>10<span class="WinnerColor">0</span> Wi<span class="WinnerColor">n</span> Badg<span class="WinnerColor">e</span></p>
             </div>
             <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
           </div>
