--- a/index.html
+++ b/index.html
@@ -2002,6 +2002,10 @@
           </div>
       </div>
 
+      <div class="TextKillBottom animate__animated animate__heartBeat">
+        <p>Head Shot <span class="NumberBottomText">Number</span> 100</p>
+      </div>
+
 
       
 
