AD Top Bottom Screen

--- a/index.html
+++ b/index.html
@@ -2002,8 +2002,11 @@
           </div>
       </div>
 
-      <div class="TextKillBottom animate__animated animate__heartBeat">
+      <div class="TextKillBottom animate__fadeInUp animate__animated">
+        <div class="TextBottomAllDiv animate__animated animate__flash anim3">
         <p>Head Shot <span class="NumberBottomText">Number</span> 100</p>
+        <div class="BottomTextLine"></div>
+        </div>
       </div>
 
 
